# rubik-cage

./: .gitignore  Cargo.toml  README.md  Trunk.toml  app-557000f242c79978.js  app-7b2b18391c3bc3d9.css  app-e6c285fd0ec8b1d6.js  cage-a5204f5b88534e6.css  index.html  player-panel-6a916401e1a71c41.css  style.css  worker.js  worker_bg.wasm
.github/workflows/: deploy.yml
src/: cage.rs  cubie.rs  game.rs  lib.rs  line.rs  main.rs  move.rs  zobrist.rs
src/app/: agent.rs  cage.rs  cube.rs  game_control.rs  hovered_move.rs  mod.rs  player.rs  utils.rs
src/core/: cage.rs  cubie.rs  game.rs  line.rs  mod.rs  move.rs
src/search/: naive.rs
styles/: app.css  cage.css  player-panel.css
