[package]
name = "rubik-cage"
version = "0.1.0"
edition = "2024"

[dependencies]
owo-colors = "4.2.2"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
web-sys = "0.3.77"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
